--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "./bin/www",
   "scripts": {
     "start": "node ./bin/www",
+    "lint": "node ./node_modules/.bin/eslint .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -19,5 +20,9 @@
     "mongoose": "^4.6.5",
     "morgan": "^1.7.0",
     "path": "^0.12.7"
+  },
+  "devDependencies": {
+    "eslint": "^5.16.0",
+    "eslint-config-google": "^0.12.0"
   }
 }
