--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "express-validator": "^5.3.1",
     "mongoose": "^4.6.5",
     "morgan": "^1.7.0",
     "path": "^0.12.7"
   },
   "devDependencies": {
     "eslint": "^5.16.0",
-    "eslint-config-google": "^0.12.0"
+    "eslint-config-google": "^0.12.0",
+    "mocha": "^6.0.2"
   }
 }
