--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node ./bin/www",
     "lint": "node ./node_modules/.bin/eslint .",
-    "test": "NODE_ENV=test ./node_modules/.bin/_mocha --timeout 5000 --recursive --exit ./tests"
+    "pretest": "npm run lint",
+    "test": "NODE_ENV=test ./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha -- --timeout 5000 --report lcovonly --exit -R spec $(find ./tests -name \"*.spec.js\" -not -path \"./node_modules/*\")"
   },
   "keywords": [
     "express",
@@ -27,6 +28,7 @@
     "chai-http": "^4.2.1",
     "eslint": "^5.16.0",
     "eslint-config-google": "^0.12.0",
+    "istanbul": "^0.4.5",
     "mocha": "^6.0.2"
   }
 }
