--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "./bin/www",
   "scripts": {
     "start": "node ./bin/www",
+    "prelint": "rm -rf coverage",
     "lint": "node ./node_modules/.bin/eslint .",
     "pretest": "npm run lint",
     "test": "NODE_ENV=test ./node_modules/.bin/istanbul cover ./node_modules/.bin/_mocha -- --timeout 5000 --report lcovonly --exit -R spec $(find ./tests -name \"*.spec.js\" -not -path \"./node_modules/*\")"
